--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,6 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+h3{
+  font-family: 'Poppins', sans-serif;
+}
